--- a/roles/nginx/defaults/main.yaml
+++ b/roles/nginx/defaults/main.yaml
@@ -1,22 +1,9 @@
-domain_names:
-  - domain.net
-  - domain.com
+# nginx
+username: "{{ podman_username }}"
+app_path: /app/nginx
+certs_path: /app/certbot
 
-nginx_config_path: /var/local/nginx
-nginx_certs_path: /var/local/certbot
-
-nginx_networks:
-  - name: bridge
-nginx_purge_networks: no
-
-nginx_ports:
-  - 80
-  - 443
-nginx_purge_ports: no
-
-# formatted as target mount: host volume path
-nginx_contents:
-  /srv: /srv
-nginx_purge_contents: no
-
-nginx_run: no
+# podman
+container: nginx
+networks: 
+  - "{{ podman_network }}"
