--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,6 +1,7 @@
 collections:
   - name: community.general
   - name: ansible.posix
+  - name: containers.podman
 
 roles:
   - name: willshersystems.sshd
