--- a/roles/ansible_access/defaults/main.yaml
+++ b/roles/ansible_access/defaults/main.yaml
@@ -1,3 +1,3 @@
-username: ansible_remote_user
-uid: 1000000
-ssh_public_key_file: ~/.ssh/id_rsa.pub
+username: ansible_remote
+uid: 900000
+ssh_public_key_file: ~/.ssh/ansible_id_rsa.pub
