--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -2,114 +2,100 @@
 - name: Set up nginx folder
   become: yes
   file:
-    path: "{{ nginx_config_path }}"
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
+    path: "{{ app_path }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
     recurse: yes
     state: directory
 
 - name: Set up nginx subfolders
+  become: yes
+  become_user: "{{ username }}"
   file:
-    path: "{{ nginx_config_path }}/{{ item }}"
+    path: "{{ app_path }}/{{ item }}"
     state: directory
   loop:
     - conf.d
     - stream.d
-    - log
+    - logs
 
 - name: Copy nginx.conf
+  become: yes
+  become_user: "{{ username }}"
   copy:
     src: nginx.conf
-    dest: "{{ nginx_config_path }}"
+    dest: "{{ app_path }}"
 
 - name: Set up certs folder
   become: yes
   file:
-    path: "{{ nginx_certs_path }}"
+    path: "{{ certs_path }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
     state: directory
 
-- name: Set up contents folder
+### Read facts
+- name: Read network and port facts
+  set_fact:
+    ports_list: "{{ (ansible_local.podman_ports.tcp + ansible_local.podman_ports.tcp) | unique }}"
+    publish_ports: >
+      {{ 
+        ansible_local.podman_ports.tcp | default([]) | unique 
+        | map('string') | map('regex_replace', '([0-9]+)', '\1:\1/tcp') 
+        + 
+        ansible_local.podman_ports.udp | default([]) | unique 
+        | map('string') | map('regex_replace', '([0-9]+)', '\1:\1/udp')
+      }}
+
+### Set up podman container
+- name: Create nginx container
   become: yes
-  file:
-    path: "{{ item.value }}"
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-    state: directory
-  with_dict: "{{ nginx_contents }}"
+  become_user: "{{ username }}"
+  containers.podman.podman_container:
+    name: "{{ container }}"
+    image: docker.io/nginx:alpine
+    label:
+      io.containers.autoupdate: registry
+      PODMAN_SYSTEMD_UNIT: "container-{{ container }}.service"
+    publish: "{{ publish_ports }}"
+    network: "{{ networks }}"
+    volume:
+      - "{{ app_path }}/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "{{ app_path }}/conf.d:/etc/nginx/conf.d:ro"
+      - "{{ app_path }}/stream.d:/etc/nginx/stream.d:ro"
+      - "{{ certs_path }}:/etc/nginx/certs:ro"
+      - "{{ app_path }}/logs:/var/log/nginx"
+    recreate: yes
+    state: created
+    healthcheck: "netstat -ntlp | grep -q :{{ ports_list | first | string }}"
+    healthcheck_interval: 10s
+    healthcheck_timeout: 2s
+    healthcheck_retries: 3
+    generate_systemd:
+      path: "/home/{{ username }}/.config/systemd/user"
+      restart_policy: always
 
-### Set up running facts
-- name: Add specified networks to existing networks list
-  set_fact:
-    nginx_networks: "{{ ( nginx_networks + ansible_local.nginx.networks | default([]) ) | unique }}"
-  when: not nginx_purge_networks
-
-- name: Add specified ports to existing ports list
-  set_fact:
-    nginx_ports: "{{ ( nginx_ports + ansible_local.nginx.ports | default([]) ) | unique }}"
-  when: not nginx_purge_ports
-  
-- name: Add specified content mounts to existing contents list
-  set_fact:
-    nginx_contents: "{{ ansible_local.nginx.contents | default({}) | combine(nginx_contents) }}"
-  when: not nginx_purge_contents
-  
-- name: Save nginx facts
-  copy: 
-    content: "{{ {
-      'networks': nginx_networks,
-      'ports': nginx_ports,
-      'contents': nginx_contents,
-    } | to_nice_json }}" 
-    dest: /etc/ansible/facts.d/nginx.fact
-
-### Set up networks
-- name: Set up docker networks
-  docker_network: 
-    name: "{{ item.name }}"
-  loop: "{{ nginx_networks }}"
-  when: nginx_run
-
-### Run nginx
-- name: Start nginx container
-  community.general.docker_container:
-    name: nginx
-    image: nginx:alpine
-    volumes: "{{ [
-      nginx_config_path~'/nginx.conf:/etc/nginx/nginx.conf:ro',
-      nginx_config_path~'/conf.d:/etc/nginx/conf.d:ro',
-      nginx_config_path~'/stream.d:/etc/nginx/stream.d:ro',
-      nginx_config_path~'/log:/var/log/nginx',
-      nginx_certs_path~':/etc/nginx/certs:ro',
-    ] + nginx_contents.values() | zip(nginx_contents.keys()) | map('join',':') | list }}"
-    ports: "{{ nginx_ports | map('string') | map('regex_replace', '([0-9]+)', '\\1:\\1') }}"
-    networks: "{{ nginx_networks }}"
-    network_mode: default
-    purge_networks: yes
-    networks_cli_compatible: yes
-    container_default_behavior: no_defaults
-    restart_policy: always
-    pull: "{{ nginx_run }}"
-    recreate: "{{ nginx_run }}"
-    healthcheck:
-      test:
-        - CMD-SHELL
-        - "netstat -ntlp | grep -q :{{ nginx_ports | first | string }}" 
-      interval: 10s
-      timeout: 2s
-      retries: 3
-  when: nginx_run
+- name: Start nginx service
+  become: yes
+  become_user: "{{ username }}"
+  systemd:
+    name: "container-{{ container }}.service"
+    scope: user
+    daemon_reload: yes
+    enabled: yes
+    state: started
 
 - name: Sanity check for all ports listened
   wait_for:
     port: "{{ item }}"
     timeout: 5
-  loop: "{{ nginx_ports }}"
-  when: nginx_run
+  loop: "{{ ports_list }}"
 
 ### Cron job to reload nginx config
 - name: Set up nginx reload cron job
+  become: yes
+  become_user: "{{ username }}"
   cron:
     name: reload nginx config
     special_time: hourly
-    job: docker exec nginx nginx -s reload
-  when: nginx_run
+    job: podman exec {{ container }} nginx -s reload
