--- a/roles/plex/defaults/main.yaml
+++ b/roles/plex/defaults/main.yaml
@@ -1,26 +1,18 @@
-plex_data_owner: plex_docker
-plex_data_path: /var/local/plex
-plex_data_links:
-  - source: /mnt/music
-    target: music
-  - source: /mnt/movies
-    target: movies
+# plex
+username: "{{ podman_username }}"
+app_path: /app/plex
+media_path: /data/Media
 
-plex_container_name: plex
-plex_networks:
-  - name: bridge
+# podman
+container: plex-server
+networks: 
+  - "{{ podman_network }}"
+direct_port: 32480
 
 # network
-plex_domains: 
-  - domain_name: domain.net
-    server_names:
-      - plex.domain.net
-      - media.domain.net
-  - domain_name: domain.com
-    server_names:
-      - plex.domain.com
-
-plex_direct_port: 32400
+domains: "{{ host_domains }}"
+server_prefix: plex
 
 # nginx
-nginx_config_path: /var/local/nginx
+nginx_path: "{{ nginx_path }}"
+nginx_user: "{{ podman_username }}"
