--- a/roles/plex/tasks/main.yaml
+++ b/roles/plex/tasks/main.yaml
@@ -1,74 +1,21 @@
-- name: Set up PLEX data owner
-  include_role:
-    name: docker_user
-  vars:
-    username: "{{ plex_data_owner }}"
-    comment: "PLEX data owner"
-    uid_offset: 1000
-
-- name: Create PLEX folder
+### Set up PLEX config
+- name: Setup PLEX folders
   become: yes
   file:
-    path: "{{ plex_data_path }}"
-    owner: "{{ plex_data_owner }}"
-    group: "{{ plex_data_owner }}"
+    path: "{{ app_path }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
     recurse: yes
-    follow: no
     state: directory
-
-- name: Set up PLEX folder
-  become: yes
-  become_user: "{{ plex_data_owner }}"
-  block:
-    - name: Set up folders to mount into docker
-      file:
-        path: "{{ plex_data_path }}/{{ item }}"
-        state: directory
-      loop:
-        - config
-        - transcode
-        - data
-    - name: Set up data folder link destinations
-      file:
-        path: "{{ plex_data_path }}/data/{{ item.target | dirname }}"
-        state: directory
-      loop: "{{ plex_data_links }}"
-    - name: Set up data folder links
-      file:
-        path: "{{ plex_data_path }}/data/{{ item.target }}"
-        src: "{{ item.source }}"
-        state: link
-      loop: "{{ plex_data_links}}"
-
-- name: Create nginx folder
-  become: yes
-  file:
-    path: "{{ nginx_config_path }}"
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-    state: directory
-
-- name: Set up nginx site rules
-  block:
-    - name: Create site folders
-      file:
-        path: "{{ nginx_config_path }}/conf.d/{{ item.domain_name }}"
-        state: directory
-      loop: "{{ plex_domains }}"
-    - name: Generate nginx config for PLEX
-      template:
-        src: plex.conf.j2
-        dest: "{{ nginx_config_path }}/conf.d/{{ item.domain_name }}/plex.conf"
-      loop: "{{ plex_domains }}"
-
-- name: Set up docker networks
-  docker_network: 
-    name: "{{ item.name }}"
-  loop: "{{ plex_networks }}"
+  loop:
+    - "{{ app_path }}"
+    - "{{ app_path }}/config"
+    - "{{ app_path }}/transcode"
+    - "{{ media_path }}"
 
 - name: Check existing PLEX preference file
   stat:
-    path: "{{ plex_data_path }}/config/Library/Application Support/Plex Media Server/Preferences.xml"
+    path: "{{ app_path }}/config/Library/Application Support/Plex Media Server/Preferences.xml"
   register: pref_stat
 
 - name: Input PLEX claim token
@@ -77,35 +24,77 @@
   register: plex_claim_token
   when: not pref_stat.stat.exists
 
-- name: Start PLEX container
-  community.general.docker_container:
-    name: "{{ plex_container_name }}"
-    image: plexinc/pms-docker
-    labels:
-      com.centurylinklabs.watchtower.enable: "true"
+
+### Network and ports
+- name: Set up podman ports
+  import_role:
+    name: register_ports
+  vars:
+    tcp_ports: 
+      - "{{ direct_port }}"
+    purge_ports: no
+
+
+### Podman container and service
+- name: Create PLEX container
+  become: yes
+  become_user: "{{ username }}"
+  containers.podman.podman_container:
+    name: "{{ container }}"
+    image: docker.io/plexinc/pms-docker
+    label:
+      io.containers.autoupdate: registry
+      PODMAN_SYSTEMD_UNIT: "container-{{ container }}.service"
     env:
       PLEX_CLAIM: "{{ plex_claim_token.user_input | default('') }}"
-    mounts:
-      - source: "{{ plex_data_path }}/config"
-        target: /config
-        type: bind
-      - source: "{{ plex_data_path }}/transcode"
-        target: /transcode
-        type: bind
-      - source: "{{ plex_data_path }}/data"
-        target: /data
-        type: bind
-      - source: /mnt
-        target: /mnt
-        type: bind
-        propagation: rslave
-    ports:
-      - "{{ plex_direct_port }}:32400"
-    networks: "{{ plex_networks }}"
-    network_mode: default
-    purge_networks: yes
-    networks_cli_compatible: yes
-    container_default_behavior: no_defaults
-    restart_policy: always
-    pull: yes
+      PLEX_UID: "0"
+      PLEX_GID: "0"
+    network: "{{ networks }}"
+    volume:
+      - "{{ app_path }}/config:/config"
+      - "{{ app_path }}/transcode:/transcode"
+      - "{{ media_path }}:/Media"
     recreate: yes
+    state: created
+    generate_systemd:
+      path: "/home/{{ username }}/.config/systemd/user"
+
+- name: Enable and start PLEX service
+  become: yes
+  become_user: "{{ username }}"
+  systemd:
+    name: "container-{{ container }}.service"
+    scope: user
+    daemon_reload: yes
+    enabled: yes
+    state: started
+    
+
+### nginx
+- name: Create nginx folder
+  become: yes
+  file:
+    path: "{{ nginx_path }}"
+    owner: "{{ nginx_user }}"
+    group: "{{ nginx_user }}"
+    recurse: yes
+    state: directory
+
+- name: Set up nginx site rules
+  become: yes
+  become_user: "{{ nginx_user }}"
+  block:
+    - name: Generate nginx config for PLEX direct access
+      template:
+        src: plex_direct.conf.j2
+        dest: "{{ nginx_path }}/stream.d/plex_direct.conf"
+    - name: Create site folders
+      file:
+        path: "{{ nginx_path }}/conf.d/{{ item }}"
+        state: directory
+      loop: "{{ domains }}"
+    - name: Generate nginx config for PLEX sites
+      template:
+        src: plex.conf.j2
+        dest: "{{ nginx_path }}/conf.d/{{ item }}/plex.conf"
+      loop: "{{ domains }}"
