--- a/roles/xray/tasks/main.yaml
+++ b/roles/xray/tasks/main.yaml
@@ -1,53 +1,47 @@
-- name: Get ansible user info
-  getent:
-    database: passwd
-    key: "{{ ansible_user }}"
-
+### xray config
 - name: Set up xray folder
   become: yes
   file:
-    path: "{{ xray_data_path }}"
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
+    path: "{{ app_path }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
     recurse: yes
     state: directory
 
-- name: Generate xray server config
-  template:
-    src: server_config.json.j2
-    dest: "{{ xray_data_path }}/server_config.json"
-
-- name: Set up xray log folder
-  file:
-    path: "{{ xray_data_path }}/log"
-    state: directory
-
-- name: Set up nginx folder
+- name: Set up xray configs
   become: yes
-  file:
-    path: "{{ nginx_config_path }}"
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-    state: directory
+  become_user: "{{ username }}"
+  block:
+    - name: Generate server config
+      template:
+        src: server_config.json.j2
+        dest: "{{ app_path }}/server_config.json"
+    - name: Set up log folder
+      file:
+        path: "{{ app_path }}/log"
+        state: directory
 
-- name: Set up nginx site folders
-  file:
-    path: "{{ nginx_config_path }}/conf.d/{{ item }}/www"
-    state: directory
-  loop: "{{ xray_domains }}"
+
+### nginx config
+- name: Set up nginx www folder
+  import_role:
+    name: www
 
 - name: Generate nginx config for xray
+  become: yes
+  become_user: "{{ nginx_user }}"
   template:
     src: nginx.conf.j2
-    dest: "{{ nginx_config_path }}/conf.d/{{ item }}/www/xray.conf"
-  loop: "{{ xray_domains }}"
+    dest: "{{ nginx_path }}/conf.d/{{ item }}/www/xray.conf"
+  loop: "{{ domains }}"
 
+
+### Firewall for udp full-cone support
 - name: Create firewalld service rule
   become: yes
   copy:
     src: xray.xml
-    dest: /usr/lib/firewalld/services
-    mode: "644"
+    dest: /etc/firewalld/services
   notify: Reload firewalld
 
 - meta: flush_handlers
@@ -60,26 +54,37 @@
     immediate: yes
     permanent: yes
 
-- name: Start xray container
-  community.general.docker_container:
-    name: "{{ xray_container_name }}"
-    image: teddysun/xray
+
+### Podman container and service
+- name: Create xray container
+  become: yes
+  become_user: "{{ username }}"
+  containers.podman.podman_container:
+    name: "{{ container }}"
+    image: docker.io/teddysun/xray
+    label:
+      io.containers.autoupdate: registry
+      PODMAN_SYSTEMD_UNIT: "container-{{ container }}.service"
+    network: host
     volumes:
-      - "{{ xray_data_path }}/server_config.json:/etc/xray/config.json:ro"
-      - "{{ xray_data_path }}/log:/var/log/xray"
-    user: "{{ getent_passwd[ansible_user][1] }}:{{ getent_passwd[ansible_user][2] }}"
-    userns_mode: host 
-    network_mode: host
-    purge_networks: yes
-    networks_cli_compatible: yes
-    container_default_behavior: no_defaults
-    restart_policy: always
-    pull: yes
+      - "{{ app_path }}/server_config.json:/etc/xray/config.json:ro"
+      - "{{ app_path }}/log:/var/log/xray"
     recreate: yes
-    healthcheck:
-      test:
-        - CMD-SHELL
-        - "netstat -ntlp | grep -q :{{ xray_port }}"
-      interval: 10s
-      timeout: 2s
-      retries: 3
+    state: created
+    healthcheck: "netstat -ntlp | grep -q :{{ xray_port }}"
+    healthcheck_interval: 10s
+    healthcheck_timeout: 2s
+    healthcheck_retries: 3
+    generate_systemd:
+      path: "/home/{{ username }}/.config/systemd/user"
+      restart_policy: always
+
+- name: Enable and start xray service
+  become: yes
+  become_user: "{{ username }}"
+  systemd:
+    name: "container-{{ container }}.service"
+    scope: user
+    daemon_reload: yes
+    enabled: yes
+    state: started
